k8s/postgres-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-externa
  namespace: ckan
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: db-externa-slice
  namespace: ckan
  labels:
    kubernetes.io/service-name: db-externa
addressType: IPv4
ports:
  - protocol: TCP
    port: 5432
endpoints:
  - addresses:
      - "172.18.0.3"
