k8s/ckan_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ckan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: CKAN/redis:7  # Imagen oficial con el esquema de CKAN
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        volumeMounts:
            - name: redis-data-volume 
              mountPath: /data
              subPath: data
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
      volumes:
        - name: redis-data-volume
          persistentVolumeClaim:
            claimName: redis-pvc    
            
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ckan
spec:
  selector:
    app: redis
  ports:
  - port: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
  namespace: ckan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr
  template:
    metadata:
      labels:
        app: solr
    spec:
      securityContext:
        runAsUser: 8983
        fsGroup: 8983
      # 2. Init Container para asegurar que la carpeta sea de solr (8983)
      containers:
      - name: solr
        image: CKAN/ckan-solr:2.10-solr9  # Imagen oficial con el esquema de CKAN
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 8983
        ports:
        - containerPort: 8983
        volumeMounts:
            - name: solr-data-volume 
              mountPath: /var/solr
              subPath: solr
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi" # Margen para el contenedor
            cpu: "500m"
      volumes:
        - name: solr-data-volume
          persistentVolumeClaim:
            claimName: solr-pvc 
            
---
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: ckan
spec:
  selector:
    app: solr
  ports:
  - port: 8983
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datapusher
  namespace: ckan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datapusher
  template:
    metadata:
      labels:
        app: datapusher
    spec:
      securityContext:
        runAsUser: 33
        fsGroup: 33
      containers:
      - name: datapusher
        image: ckan/ckan-base-datapusher:0.0.21
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 33
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        ports:
        - containerPort: 8800 # Puerto corregido
        
---
apiVersion: v1
kind: Service
metadata:
  name: datapusher
  namespace: ckan
spec:
  selector:
    app: datapusher
  ports:
  - port: 8800

---
# 3. DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckan
  namespace: ckan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckan
  template:
    metadata:
      labels:
        app: ckan
    spec:
      securityContext:
        runAsUser: 900
        fsGroup: 900
      containers:
      - name: ckan
        image: CKAN/ckan:2.11.4
        imagePullPolicy: IfNotPresent
        securityContext:
            runAsUser: 900
            allowPrivilegeEscalation: false
        ports:
        - containerPort: 5000
        volumeMounts:           
        - name: storage-data
          mountPath: /var/lib/ckan/storage # Ruta en la imagen
          subPath: storage  
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "3Gi"
      volumes:
      - name: storage-data
        persistentVolumeClaim:
          claimName: ckan-storage-pvc     

---
apiVersion: v1
kind: Service
metadata:
  name: ckan
  namespace: ckan
spec:
  selector:
    app: ckan
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckan-ingress
  namespace: ckan
spec:
  ingressClassName: nginx
  rules:
  - host: ckan.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ckan
            port:
              number: 80
